Bug 702290 - mswinpr2 doesn't work if the printer has a name with a German umlaut
Summary: mswinpr2 doesn't work if the printer has a name with a German umlaut
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: MS Windows Display Driver (show other bugs)
Version: 9.52
Hardware: PC Windows 10
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-02 16:48 UTC by Frank Heindörfer
Modified: 2021-10-11 11:07 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Batch file to reproduce the problem. (295 bytes, text/plain)
2020-04-02 16:48 UTC, Frank Heindörfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Heindörfer 2020-04-02 16:48:21 UTC
Created attachment 19077 [details]
Batch file to reproduce the problem.

The device mswinpr2 doesn't work if the printer has a name with a German umlaut (or any other char greater ASCII code 127).

On a German Windows 10 system (full updated) is a printer added with the name "büro". mswinpr2 couldn't find this printer. If you rename the printer to "buero" there is no problem.

Take a look at the attached batch file.

Best regards

Frank
Comment 1 Ray Johnston 2020-05-16 15:24:12 UTC
I have trouble getting the print dialog to no pop up, and also to have it
show anything other than the default printer.

I'll investigate further.
Comment 2 Ken Sharp 2021-10-11 11:07:54 UTC
This commit 350acb64892ddae3167c88e448d9a690fd38ac1e resolves the problem described here, for me.

I'm not convinced this is a complete solution, but it is certainly an improvement.